cabal-version: 1.12

name:           yacad
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/yacad#readme>
homepage:       https://github.com/p4l1ly/yacad#readme
bug-reports:    https://github.com/p4l1ly/yacad/issues
author:         Pavol Vargovcik
maintainer:     pavol.vargovcik@gmail.com
copyright:      2020 Pavol Vargovcik
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/p4l1ly/yacad

library
  exposed-modules:
      Yacad.ImplicitFn
      Yacad.Line
      Yacad.Raster
      Yacad.Raster.Expr
      Yacad.Raster3
      Yacad.Shapes.InvoluteGear
      Yacad.Transpose
  other-modules:
      Paths_yacad
  hs-source-dirs:
      src
  build-depends:
      array
    , base >=4.7 && <5
    , data-ordlist
    , implicit
    , recursion-schemes
  default-language: Haskell2010

test-suite yacad-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_yacad
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base >=4.7 && <5
    , data-ordlist
    , implicit
    , recursion-schemes
    , yacad
  default-language: Haskell2010
