cabal-version: 2.4

name:           yacad
version:        0.1.0.0
description:    Mixing in multiple CAD paradigms into ImplicitCAD: rasterization, analytic geometry
homepage:       https://github.com/p4l1ly/yacad#readme
bug-reports:    https://github.com/p4l1ly/yacad/issues
author:         Pavol Vargovcik
maintainer:     pavol.vargovcik@gmail.com
copyright:      2020 Pavol Vargovcik
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/p4l1ly/yacad

library
  exposed-modules:
      Yacad.ImplicitFn
      Yacad.Line
      Yacad.Raster
      Yacad.Raster.Expr
      Yacad.Raster3
      Yacad.Shapes.InvoluteGear
      Yacad.Transpose
  other-modules:
      Paths_yacad
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , array ^>=0.5.4.0
    , data-ordlist ^>=0.4.7.0
    , data-fix ^>=0.3.0
    , recursion-schemes ^>=5.2.1
    , store ^>=0.7.8
    , th-utilities ^>=0.2.4.1
    , implicit
    , recursion-schemes
  default-language: Haskell2010

test-suite yacad-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_yacad
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , array ^>=0.5.4.0
    , data-ordlist ^>=0.4.7.0
    , recursion-schemes ^>=5.2.1
    , data-fix ^>=0.3.0
    , implicit
    , recursion-schemes
    , yacad
  default-language: Haskell2010
